--- a/Assignment 4.Rmd
+++ b/Assignment 4.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Assignment 4"
+title: "Assignment 4 - Starting with R"
 author: "Jakob Grøhn Damgaard"
 date: "10/5/2020"
 output: pdf_document
@@ -9,22 +9,26 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Use R to figure out how many elements in the vector below are greater than 2 
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r 1)}
+#Installing packages
+install.packages("pacman")
+pacman::p_load(tidyverse)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+#Initializing the vector
+rooms <- c(1, 2, 1, 3, 1, NA, 3, 1, 3, 2, 1, NA, 1, 8, 3, 1, 4, NA, 1, 3, 1, 2, 1, 7, 1, NA)
 
-```{r cars}
-summary(cars)
+#Filtering out all NAs 
+rooms <- rooms[!is.na(rooms)]
+
+#Counting number of elements with a value above 2
+length(rooms[rooms>2])
 ```
 
-## Including Plots
+## What is the result of running median() function on the above 'rooms' vector?
 
-You can also embed plots, for example:
+```{r 2)}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
