--- a/Assignment 4.Rmd
+++ b/Assignment 4.Rmd
@@ -2,7 +2,8 @@
 title: "Assignment 4 - Starting with R"
 author: "Jakob Grøhn Damgaard"
 date: "10/5/2020"
-output: pdf_document
+output: 
+    html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -12,10 +13,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Use R to figure out how many elements in the vector below are greater than 2 
 
 ```{r 1)}
-#Installing packages
-install.packages("pacman")
-pacman::p_load(tidyverse)
-
 #Initializing the vector
 rooms <- c(1, 2, 1, 3, 1, NA, 3, 1, 3, 2, 1, NA, 1, 8, 3, 1, 4, NA, 1, 3, 1, 2, 1, 7, 1, NA)
 
@@ -29,6 +26,22 @@ length(rooms[rooms>2])
 ## What is the result of running median() function on the above 'rooms' vector?
 
 ```{r 2)}
-
+#Taking the median of the values in the vector
+median(rooms)
 ```
 
+## What is the result of running median() function on the above 'rooms' vector?
+
+```{r 3)}
+#Installing packages
+pacman::p_load(tidyverse)
+
+#Creating subfolder for data
+dir.create("data")
+
+#Downloading data
+download.file("https://ndownloader.figshare.com/files/11492171", "data/SAFI_clean.csv", mode = "wb")
+
+# Reading data
+interviews <- read_csv("data/SAFI_clean.csv")
+```
