--- a/Assignment 4.Rmd
+++ b/Assignment 4.Rmd
@@ -11,26 +11,29 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Use R to figure out how many elements in the vector below are greater than 2 
-
+Initially, I define the vector 'rooms'. I then proceed to discard all NAs using the 'na.omit()' function. Finally, I find the amount of elements with a value above two using the 'length()' function on the following subset of 'rooms':  rooms[room>2].
 ```{r 1)}
 #Initializing the vector
 rooms <- c(1, 2, 1, 3, 1, NA, 3, 1, 3, 2, 1, NA, 1, 8, 3, 1, 4, NA, 1, 3, 1, 2, 1, 7, 1, NA)
 
 #Filtering out all NAs 
-rooms <- rooms[!is.na(rooms)]
+rooms <- na.omit(rooms)
 
 #Counting number of elements with a value above 2
 length(rooms[rooms>2])
 ```
 
+The number of elements with a value above 2 is 8. 
+
 ## What is the result of running median() function on the above 'rooms' vector?
 
+Running the 'median()' function on the na-omitted 'rooms' yields a median of 1.5
 ```{r 2)}
 #Taking the median of the values in the vector
 median(rooms)
 ```
 
-## What is the result of running median() function on the above 'rooms' vector?
+## Download and read SAFI_clean.csv
 
 ```{r 3)}
 #Installing packages
